# status-page

./: .gitignore  Dockerfile.celery  LICENSE  Procfile  README.md  docker-compose.yml  nixpacks.toml  requirements.txt  run_daphne.sh
backend/: .env.example  Dockerfile  Dockerfile.celery  README.md  pyproject.toml  requirements.txt
backend/config/: celery.py  middleware.py  settings.py
backend/core/: authentication.py  consumers.py  models.py  pagination.py  permissions.py  routing.py  throttling.py
backend/incidents/: __init__.py  admin.py  models.py  urls.py  views.py
backend/incidents/migrations/: 0001_initial.py  0003_remove_incidentupdate_created_by_and_more.py
backend/organizations/: __init__.py  views.py
backend/organizations/migrations/: 0003_organization_clerk_org_id_and_more.py
backend/services/: __init__.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/services/migrations/: 0005_remove_incidentupdate_incident_and_more.py
backend/services/tests/: test_pagination.py
backend/users/: models.py  webhooks.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: authentication.py  exceptions.py  middleware.py  urls.py
core/tests/: urls.py
frontend/: .env.example  .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  env.d.ts  main.tsx
incidents/: serializers.py  tasks.py
organizations/: models.py  serializers.py  urls.py
services/: models.py  views.py
users/: serializers.py  views.py
users/migrations/: 0001_initial.py
(+30 files in other folders)
